refactor: Arrays.asList() 대신 List.of()를 사용하도록 변경